Добавил ссылку бабули без xml

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <a href="//m.market.yandex.ru/search.xml?cvredirect=2&amp;text=%D0%BA%D0%B0%D1%80%D1%82%D0%BE%D1%88%D0%B5%D1%87%D0%BA%D0%B0&amp;source=tabbar" target="_blank">Маркет web4</a>
 <br>
 <a href="//m.market.yandex.ru/search.xml?cvredirect=2&amp;text=картошечка&amp;source=tabbar" target="_blank">Маркет бабуля</a>
+<br>
+<a href="//m.market.yandex.ru/search?cvredirect=2&amp;text=картошечка&amp;source=tabbar" target="_blank">Маркет бабуля без xml</a>
