--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-<a href="//m.market.yandex.ru/search.xml?cvredirect=2&amp;text=%D0%BA%D0%B0%D1%80%D1%82%D0%BE%D1%88%D0%B5%D1%87%D0%BA%D0%B0&amp;source=tabbar" target="_blank">Маркет web4</a>
-<br>
-<a href="//m.market.yandex.ru/search.xml?cvredirect=2&amp;text=картошечка&amp;source=tabbar" target="_blank">Маркет бабуля</a>
-<br>
-<a href="//m.market.yandex.ru/search?cvredirect=2&amp;text=картошечка&amp;source=tabbar" target="_blank">Маркет бабуля без xml</a>
+<a href="https://dialogs.yandex.ru/store/skills/916a8380-skazka-pro-repku?utm_source=site&utm_medium=badge&utm_campaign=v1&utm_term=d1" target="_blank"><img alt="Алиса это умеет" src="https://dialogs.s3.yandex.net/badges/v1-term1.svg"/></a>
