index with array svg

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<a href="https://dialogs.yandex.ru/store/skills/916a8380-skazka-pro-repku?utm_source=site&utm_medium=badge&utm_campaign=v1&utm_term=d1" target="_blank"><img alt="Алиса это умеет" src="https://dialogs.s3.yandex.net/badges/v1-term1.svg"/></a>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Document</title>
+        <style>
+            .array {
+                width: 200px;
+                height: 200px;
+                background-repeat: no-repeat;
+            }
+
+            #array {
+                background-image: url('array.svg');
+            }
+
+            #array_fixed {
+                background-image: url('array_fixed.svg');
+            }
+        </style>
+    </head>
+    <body>
+        <div id="array" class="array"></div>
+        <div id="array_fixed" class="array"></div>
+    </body>
+</html>
