--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <style>
             .array {
                 width: 200px;
-                height: 200px;
+                height: 50px;
                 background-repeat: no-repeat;
             }
 
@@ -19,10 +19,18 @@
             #array_fixed {
                 background-image: url('array_fixed.svg');
             }
+            #array_red {
+                background-image: url('array_red.svg');
+            }
+            #array_blue {
+                background-image: url('array_blue.svg');
+            }
         </style>
     </head>
     <body>
         <div id="array" class="array"></div>
         <div id="array_fixed" class="array"></div>
+        <div id="array_red" class="array"></div>
+        <div id="array_blue" class="array"></div>
     </body>
 </html>
