--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             #array_blue {
                 background-image: url('array_blue.svg');
             }
+            #array_green {
+                background-image: url('array_green.svg');
+            }
         </style>
     </head>
     <body>
@@ -32,5 +35,6 @@
         <div id="array_fixed" class="array"></div>
         <div id="array_red" class="array"></div>
         <div id="array_blue" class="array"></div>
+        <div id="array_green" class="array"></div>
     </body>
 </html>
