--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             #array_green {
                 background-image: url('array_green.svg');
             }
+            #array_pink {
+                background-image: url('array_pink.svg');
+            }
         </style>
     </head>
     <body>
@@ -36,5 +39,6 @@
         <div id="array_red" class="array"></div>
         <div id="array_blue" class="array"></div>
         <div id="array_green" class="array"></div>
+        <div id="array_pink" class="array"></div>
     </body>
 </html>
