--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             #array_pink {
                 background-image: url('array_pink.svg');
             }
+            #array_red {
+                background-image: url('red.svg');
+            }
         </style>
     </head>
     <body>
@@ -39,6 +42,6 @@
         <div id="array_red" class="array"></div>
         <div id="array_blue" class="array"></div>
         <div id="array_green" class="array"></div>
-        <div id="array_pink" class="array"></div>
+        <div id="array_red" class="array"></div>
     </body>
 </html>
