--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             #array_pink {
                 background-image: url('array_pink.svg');
             }
-            #array_red {
+            #array_red2 {
                 background-image: url('red.svg');
             }
         </style>
@@ -42,6 +42,6 @@
         <div id="array_red" class="array"></div>
         <div id="array_blue" class="array"></div>
         <div id="array_green" class="array"></div>
-        <div id="array_red" class="array"></div>
+        <div id="array_red2" class="array"></div>
     </body>
 </html>
