--- a/alice-repka.html
+++ b/alice-repka.html
@@ -1,1 +1,22 @@
-<a href="https://dialogs.yandex.ru/store/skills/916a8380-skazka-pro-repku?utm_source=site&utm_medium=badge&utm_campaign=v1&utm_term=d1" target="_blank"><img alt="Алиса это умеет" src="https://dialogs.s3.yandex.net/badges/v1-term1.svg"/></a>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Document</title>
+    </head>
+    <body>
+        <style>
+            div {
+                width: 100px;
+                height: 100px;
+                background-color: red;
+
+                transition: transform 3s ease 0s;
+                transform: translate(500px, 10px);
+            }
+        </style>
+        <div>hello</div>
+    </body>
+</html>
