--- a/index.html
+++ b/index.html
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Document</title>
-        <style>
-            .array {
-                width: 200px;
-                height: 50px;
-                background-repeat: no-repeat;
-            }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+  </head>
+  <body>
+    <div id="app">
+      <div>Калорийность сырого на 100г</div>
+      <input type="text" type="number" v-model="rawKk" />
+      <br />
 
-            #array {
-                background-image: url('array.svg');
-            }
+      <div>Вес сырого продукта</div>
+      <input type="text" type="number" v-model="rawG" />
+      <br />
 
-            #array_fixed {
-                background-image: url('array_fixed.svg');
-            }
-            #array_red {
-                background-image: url('array_red.svg');
-            }
-            #array_blue {
-                background-image: url('array_blue.svg');
-            }
-            #array_green {
-                background-image: url('array_green.svg');
-            }
-            #array_pink {
-                background-image: url('array_pink.svg');
-            }
-            #array_red2 {
-                background-image: url('red.svg');
-            }
-        </style>
-    </head>
-    <body>
-        <div id="array" class="array"></div>
-        <div id="array_fixed" class="array"></div>
-        <div id="array_red" class="array"></div>
-        <div id="array_blue" class="array"></div>
-        <div id="array_green" class="array"></div>
-        <div id="array_red2" class="array"></div>
-    </body>
+      <div>Вес готового продукта</div>
+      <input type="text" type="number" v-model="g" />
+      <br />
+
+      <div>Сколько грамм тарелке</div>
+      <input type="text" type="number" v-model="eatG" />
+      <br />
+      <br />
+      <div>На тарелке ккалорий: {{ eatKk }}</div>
+    </div>
+
+    <script>
+      var app = new Vue({
+        el: "#app",
+        data: {
+          rawKk: 308,
+          rawG: 160,
+          g: 476,
+          eatG: 250
+        },
+        computed: {
+          eatKk() {
+            const kk =
+              parseFloat(this.rawKk) /
+              (parseFloat(this.g) / parseFloat(this.rawG));
+            return parseFloat(this.eatG) * (kk / 100);
+          }
+        }
+      });
+    </script>
+  </body>
 </html>
