--- a/DemoWeb/index.html
+++ b/DemoWeb/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/DemoWeb.loader.js";
       var config = {
-        dataUrl: buildUrl + "/DemoWeb.data.gz",
-        frameworkUrl: buildUrl + "/DemoWeb.framework.js.gz",
-        codeUrl: buildUrl + "/DemoWeb.wasm.gz",
+        dataUrl: buildUrl + "/DemoWeb.data",
+        frameworkUrl: buildUrl + "/DemoWeb.framework.js",
+        codeUrl: buildUrl + "/DemoWeb.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "AlexanderKarpov",
         productName: "Gum",
