--- a/index.html
+++ b/index.html
@@ -15,28 +15,30 @@
     <pre id="outgoing"></pre>
     <script src="simplepeer.min.js"></script>
     <script>
+        const trip = document.getElementById('trip');
+
         const config = {
             channelConfig: { ordered: false, maxRetransmits: 0 },
             config: {
                 iceServers: [
                     {
-                        urls: "stun:openrelay.metered.ca:80",
+                        urls: "stun:51.250.76.61:3478",
                     },
-                    {
-                        urls: "turn:openrelay.metered.ca:80",
-                        username: "openrelayproject",
-                        credential: "openrelayproject",
-                    },
-                    {
-                        urls: "turn:openrelay.metered.ca:443",
-                        username: "openrelayproject",
-                        credential: "openrelayproject",
-                    },
-                    {
-                        urls: "turn:openrelay.metered.ca:443?transport=tcp",
-                        username: "openrelayproject",
-                        credential: "openrelayproject",
-                    },
+                    // {
+                    //     urls: "turn:openrelay.metered.ca:80",
+                    //     username: "openrelayproject",
+                    //     credential: "openrelayproject",
+                    // },
+                    // {
+                    //     urls: "turn:openrelay.metered.ca:443",
+                    //     username: "openrelayproject",
+                    //     credential: "openrelayproject",
+                    // },
+                    // {
+                    //     urls: "turn:openrelay.metered.ca:443?transport=tcp",
+                    //     username: "openrelayproject",
+                    //     credential: "openrelayproject",
+                    // },
                 ]
             },
             trickle: false
@@ -97,7 +99,7 @@
 
                 this.peer.on('connect', () => {
                     // wait for 'connect' event before using the data channel
-                    alert('connected');
+                    trip.textContent = "CONNECTED";
                     this.connectResolve();
 
                     console.assert(this.peer._channel.ordered === false);
@@ -140,7 +142,6 @@
 
 
         const ta = document.getElementById('incoming');
-        const trip = document.getElementById('trip');
         const tm = new Map();
 
         realtime.receive(data => {
